tests/negative/typecheck/non_convertible.orng
// non_convertible.orng:7:6: error: expected a value of type `Int`, got a value of type `String`
//     x as Int
//     ^
// 
fn main() -> Int {
    let x: String = "5"
    x as Int
}